--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "gray-matter": "^4.0.3",
     "next": "13.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sharp": "^0.31.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
